--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.14",
-    "@mui/material": "^5.15.14",
+    "@mui/material": "^5.15.17",
+    "@mui/x-data-grid": "^7.4.0",
     "6pp": "^1.1.15",
     "chart.js": "^4.4.2",
     "moment": "^2.30.1",
