--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "6pp": "^1.1.15",
     "axios": "^1.7.2",
     "chart.js": "^4.4.2",
+    "framer-motion": "^11.9.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
